Fix: Setting block explicity was causing layout shifts. Doing nothing fixes it. Note: SyncPlay button is hidden from the home screen, but it is visible elsewhere

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -165,7 +165,7 @@ h1 {
 
 /* display sync button when not on home screen */
 .skinHeader:not(.noHomeButtonHeader) .headerSyncButton {
-    display: block;
+    /* display: block; */
 }
 
 /* hide search button when not on home screen */
